add: worked on code api part
